// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fromPath 1`] = `
Article {
  "content": [
    Paragraph {
      "content": [
        Text {
          "type": "Text",
          "value": "This is paragraph one. It has two sentences.",
        },
      ],
      "type": "Paragraph",
    },
    Paragraph {
      "content": [
        Text {
          "type": "Text",
          "value": "Paragraph two, only has one sentence.",
        },
      ],
      "type": "Paragraph",
    },
  ],
  "type": "Article",
}
`;

exports[`fromString 1`] = `
Article {
  "content": [
    Paragraph {
      "content": [
        "Hello world",
      ],
      "type": "Paragraph",
    },
  ],
  "type": "Article",
}
`;

exports[`fromTo 1`] = `
"This is paragraph one. It has two sentences.

Paragraph two, only has one sentence."
`;

exports[`fromTo 2`] = `"<article><p><span>This is paragraph one. It has two sentences.</span><p><span>Paragraph two, only has one sentence.</span></article>"`;

exports[`toString 1`] = `
"<article dtd-version="1.3" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:mml="http://www.w3.org/1998/Math/MathML">
  <front>
  </front>
  <body>
    <p>Hello<bold>again</bold>!</p>
  </body>
  <back>
  </back>
</article>"
`;
